--- a/app/src/main/res/drawable/blue_gradient.xml
+++ b/app/src/main/res/drawable/blue_gradient.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="@color/blue_light"
         android:endColor="@color/blue_dark"
-        />
+        android:startColor="@color/blue_light" />
 </shape>
